# Rag-Manualistica

./: .env.example  .gitignore  .pre-commit-config.yaml  Analisi.md  CHANGELOG_IMMAGINI.md  CLAUDE.md  CORREZIONI_TIMEOUT_IMMAGINI.md  CUDA.md  Dockerfile  IMPLEMENTAZIONE_COMPLETATA.md  MODIFICHE_FASE2.md  Miglioramenti.md  README.md  Soluzione problema.md  TEST_SUITE_COMPLETE.md  check_db_image_ids.py  check_vector_store.py  config.yaml  debug_api_response.py  docker-compose.yml  html_grezzo.html  pyproject.toml  pytest.ini  run_api.bat  run_api.sh  run_api_simple.bat  run_dev.bat  run_streamlit.bat  run_streamlit.sh  start_services.bat  stop_services.bat  streamlit_app.py  test_ingest.json  test_ingest.ps1  test_pdf_debug.py  test_search.ps1  uvicorn.toml
.github/workflows/: tests.yml
docs/: GPU_SETUP.md  INSTALLAZIONE_COMPLETA_IMMAGINI_OCR.md  QUICKSTART_IMMAGINI.md  RIEPILOGO_COMPLETO_IMMAGINI.md  TESTING.md  analisi_ingestion_immagini.md  implementazione_fase1_immagini.md  implementazione_fase2_ocr.md
examples/: example_usage.py
front_gpt/: README.md  angular.json  package-lock.json  package.json
front_gpt/src/: index.html  styles.scss
scripts/: check_chunk_content.py  check_indexed_url.py  download_html.py  reingest_url.py  run_tests.py  test_html_ingest.py  test_query_simple.py
src/rag_gestionale/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/integration/: __init__.py  test_api_ingest.py  test_api_search.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_chunker.py  test_crawler.py  test_generator.py  test_html_parser.py  test_pdf_parser.py  (+2 more)
(+63 files in other folders)
