[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-gestionale"
version = "0.1.0"
description = "Sistema RAG specializzato per documentazione di gestionali"
authors = [
    {name = "Admin", email = "admin@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Ingestione e parsing
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "pymupdf>=1.23.0",
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.8.0",
    "playwright>=1.40.0",
    # Vector e search
    "qdrant-client>=1.7.0",
    "opensearch-py>=2.4.0",
    "sentence-transformers>=2.2.0",
    "FlagEmbedding>=1.2.0",
    # ML e processing
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Utilities
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    # Config e cache
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.50.0",
    "scalar-fastapi>=1.4.3",
    "openai>=1.109.1",
    "hf-xet>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
